# Klooni1010

./: .gitignore  CONTRIBUTORS.md  LICENSE.md  Privacy Policy  README.md  build.gradle  gradle.properties
.github/workflows/: desktop-release.yml
android/: AndroidManifest.xml  BlockPuzzle.jks  Klooni-v0.3.apk  build.gradle  google-services.json
android/assets/: .klooni.sav
android/assets/font/: geosans-light.fnt  geosans-light32.fnt  the-next-font.fnt
android/assets/themes/: autumn.theme  bandw.theme  bulbs.theme  darcula.theme  dark.theme  default.theme  fruitey-babey.theme  ghost.theme  grey.theme  gruvbox-dark.theme  gruvbox-light.theme  material-dark.theme  material-light.theme  smile.theme  spring.theme  (+7 more)
android/src/: CMakeLists.txt
android/src/dev/lonami/klooni/: AndroidLauncher.java  AndroidShareChallenge.java  App.java  AppOpenManager.java
android/src/dev/lonami/klooni/adcache/: GoogleInterstitialAdsPool.java  InterstitialAdsManager.java
android/src/io/github/lonamiwebs/klooni/: AndroidLauncher.java  AndroidShareChallenge.java
core/: build.gradle
core/src/: Klooni.gwt.xml
desktop/: build.gradle  dev.lonami.klooni.metainfo.xml
gradle/wrapper/: gradle-wrapper.properties
html/: build.gradle
html/webapp/: index.html
ios/: Info.plist.xml  build.gradle  robovm.properties  robovm.xml
original-resources/: bulb36.xcf  bulb96-ausgangsbild.xcf  gen-ui-png.py  generate_theme.py
play-core-native-sdk/: LICENSE  playcore.cmake
play-core-native-sdk/proguard/: split_install.pgcfg
themes/: CREATING-THEMES.txt  create-theme.html  generate_theme.py
(+125 files in other folders)
